--- a/localisation/english/TMW_Slovakia_l_english.yml
+++ b/localisation/english/TMW_Slovakia_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
 
 #HOL country names
-SLO: "Slovak-Czech Republic"
-SLO_DEF: "the Slovak-Czech Republic"
-SLO_ADJ: "Slovak"
+SLO: "Slovakoczech Republic"
+SLO_DEF: "the Slovakoczech Republic"
+SLO_ADJ: "Slovakoczech"
 #parties
 SLO_communist_party: "KSS"
 SLO_socialist_party: "Smer–SD (S)"
