German focuses + Pridnestrovia typo
- added two icons to starting German focus tree
- fixed typo in Pridnestrovia
- fixed capitalization in "Dreamer" focus

--- a/localisation/english/TMW_Germany_l_english.yml
+++ b/localisation/english/TMW_Germany_l_english.yml
@@ -137,7 +137,7 @@ GER_die_geister_des_jahres_2030_desc: "Six years. Six years since the Uprising o
 GER_desperate_measures: "Desperate Measures"
 GER_desperate_measures_desc: "Placeholder."
 
-GER_discussions_with_the_dreamer: "Discussions with the dreamer"
+GER_discussions_with_the_dreamer: "Discussions with the Dreamer"
 GER_discussions_with_the_dreamer_desc: "Placeholder."
 
 GER_their_voices_our_ears: "Their Voices in our Ears"
