--- a/localisation/english/TMW_countries_l_english.yml
+++ b/localisation/english/TMW_countries_l_english.yml
@@ -162,7 +162,7 @@
  MAL_DEF: "the Federation of Malaya"
  MAL_ADJ: "Malayan"
 
- MDV: "Pridnestroovskaya Moldavskaya Respublika"
+ MDV: "Pridnestrovskaya Moldavskaya Respublika"
  MDV_DEF: "Pridnestrovskaya Moldavskaya Respublika"
  MDV_ADJ: "Moldovan"
 
