some text fixes

--- a/localisation/english/TMW_Germany_l_english.yml
+++ b/localisation/english/TMW_Germany_l_english.yml
@@ -140,7 +140,7 @@ GER_desperate_measures_desc: "Placeholder."
 GER_discussions_with_the_dreamer: "Discussions with the Dreamer"
 GER_discussions_with_the_dreamer_desc: "Placeholder."
 
-GER_their_voices_our_ears: "Their Voices in our Ears"
+GER_their_voices_our_ears: "Their Voices in Our Ears"
 GER_their_voices_our_ears_desc: "Placeholder."
 
 GER_small_talk_with_franz: "Small Talk with Franz"
@@ -152,7 +152,7 @@ GER_their_dreams_fulfilled_desc: "Placeholder."
 GER_conversations_with_moscow: "Conversations with Moscow"
 GER_conversations_with_moscow_desc: "Placeholder."
 
-GER_this_is_our_bnd: "This is our BND"
+GER_this_is_our_bnd: "This is Our BND"
 GER_this_is_our_bnd_desc: "Placeholder."
 
 GER_GER_the_unmasked_ones: "The Unmasked Ones"
@@ -173,10 +173,10 @@ GER_so_muss_es_sein_desc: "Placeholder."
 GER_freiheit_fur_alle: "Freiheit für Alle"
 GER_freiheit_fur_alle_desc: "Placeholder."
 
-GER_the_two_for_our_future: "The Two for our Future"
+GER_the_two_for_our_future: "The Two For Our Future"
 GER_the_two_for_our_future_desc: "Placeholder."
 
-GER_now_this_is_our_future: "Now this is out Future..."
+GER_now_this_is_our_future: "Now This is Our Future..."
 GER_now_this_is_our_future_desc: "Placeholder."
 
 GER_the_unmasked_ones: "The Unmasked Ones"
