--- a/localisation/english/TMW_countries_l_english.yml
+++ b/localisation/english/TMW_countries_l_english.yml
@@ -249,6 +249,10 @@
  SRL_DEF: "the Democratic Socialist Republic of Sri Lanka"
  SRL_ADJ: "Sri Lankan"
 
+ SUD: "Vostochnaya Afrikanskaya Narodnaya Respublika"
+ SUD_DEF: "Vostochnaya Afrikanskaya"
+ SUD_ADJ: "Vostochnaya Afrikanskaya Narodnaya Respublika"
+
  SWE: "Independent State of Sweden"
  SWE_DEF: "the Independent State of Sweden"
  SWE_ADJ: "Swedish"
