Salvation League stuff
- added Powell and his ideology

--- a/localisation/english/TMW_Ideologies_l_english.yml
+++ b/localisation/english/TMW_Ideologies_l_english.yml
@@ -186,6 +186,7 @@ ultranationalism_ultramilitarism_subtype: "Ultramilitarism"
 ultranationalism_fundamentalism_subtype: "Fundamentalism"
 ultranationalism_esoteric_despotism_subtype: "Esoteric Despotism"
 ultranationalism_reactionary_nationalism_subtype: "Reactionary Nationalism"
+ultranationalism_american_revanchism_subtype: "American Revanchism"
 
 fascism_corporate_statism_subtype: "Corporate Statism"
 fascism_corporatism_subtype: "Corporatism"
