--- a/localisation/english/TMW_Salvation_League_l_english.yml
+++ b/localisation/english/TMW_Salvation_League_l_english.yml
@@ -59,7 +59,7 @@ ASL_ultranationalism_party_long: "Salvation League"
 #############
 # Character names #
 #############
-
+ASL_Colin_Powell: "Colin Powell"
 
 
 
