party names for ASL
- added anotha party names for Salvation League

--- a/localisation/english/TMW_Salvation_League_l_english.yml
+++ b/localisation/english/TMW_Salvation_League_l_english.yml
@@ -11,6 +11,10 @@ ASL_ADJ: "American"
 # Party names - Starting
 ASL_ultranationalism_party: "Salvation League"
 ASL_ultranationalism_party_long: "Salvation League"
+ASL_despotism_party: "Salvation League - Powell's Loyalists"
+ASL_despotism_party_long: "Salvation League - Powell's Loyalists"
+ASL_liberalism_party: "Democrats"
+ASL_liberalism_party_long: "Democratic Party"
 # Country Names - Cosmetic Tags
 # Party names - Cosmetic Tags
 # Character names -
