--- a/localisation/english/TMW_Ideologies_l_english.yml
+++ b/localisation/english/TMW_Ideologies_l_english.yml
@@ -208,6 +208,7 @@ fascism_british_fascism_hamm_subtype: "British Ruscism"
 fascism_british_fascism_bean_subtype: "British Ruscism"
 fascism_social_credit_subtype: "Social Credit"
 fascism_german_ruscism_subtype: "German Ruscism"
+fascism_salafism_subtype: "Salafism"
 
 putinism_naturalised_putinism_subtype: "Naturalised Putinism" # Credits to the FtA team
 putinism_esoteric_putinism_subtype: "Esoteric Putinism"
