yea, chuddy, really fun...

--- a/localisation/english/TMW_Atomwaffen_Division_l_english.yml
+++ b/localisation/english/TMW_Atomwaffen_Division_l_english.yml
@@ -11,6 +11,8 @@ AWD_ADJ: "Atomwaffen"
 # Party names - Starting
 AWD_putinism_party: "AWD - NSRF"
 AWD_putinism_party_long: "Atomwaffen Division - National Socialist Resistance Front"
+AWD_ultranationalism_party: "AWD - NSRF - ONA"
+AWD_ultranationalism_party_long: "Atomwaffen Division - National Socialist Resistance Front - Order of Nine Angels"
 # Country Names - Cosmetic Tags
 # Party names - Cosmetic Tags
 # Character names -
