--- a/localisation/english/TMW_victory_points_l_english.yml
+++ b/localisation/english/TMW_victory_points_l_english.yml
@@ -427,6 +427,7 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_7315:0 "Seattle"
  VICTORY_POINTS_7480:0 "Mobile"
  VICTORY_POINTS_7552:0 "New Orleans"
+ VICTORY_POINTS_12401:0 "Shreveport"
  VICTORY_POINTS_9671:0 "San Francisco"
  VICTORY_POINTS_9713:0 "Sacramento"
  VICTORY_POINTS_10370:0 "Springfield"
