--- a/localisation/english/TMW_Montana_Republic_l_english.yml
+++ b/localisation/english/TMW_Montana_Republic_l_english.yml
@@ -64,6 +64,7 @@ MTR_liberalism_party_long: "Democratic Party of Montana"
 # Character names and desc #
 #############
 MTR_Pete_Buttigieg: "Pete Buttigieg"
+MTR_Ron_Watkins: "Ron Watkins"
 
 
 
