--- a/localisation/english/TMW_Sweden_l_english copy.yml
+++ b/localisation/english/TMW_Sweden_l_english copy.yml
@@ -115,7 +115,7 @@
  SWE_paternalism_coalition_party_long: "Socialistpartiet - Nationell Koalition"
 
  ### Characters ###
- SWE_Jimmie_Akesson: "Jimmie Åkesson"
+ SWE_Jimmie_Akesson: "Jimmie Akesson"
  
  ### Leader Descriptions ###
  
