--- a/localisation/english/TMW_Norway_l_english.yml
+++ b/localisation/english/TMW_Norway_l_english.yml
@@ -21,7 +21,7 @@
  NOR_putinism_party_long: "Alliansen - Alternativ for Norge - Hardlinere"
 
  ### Characters ###
- NOR_Haakon_VI: "Haakon VI"
+ NOR_Haakon_VI: "Haakon VIII"
  ## Leader Descs ##
 
  ### Ideas ###
