--- a/localisation/english/TMW_Ideologies_l_english.yml
+++ b/localisation/english/TMW_Ideologies_l_english.yml
@@ -8,7 +8,7 @@ conservatism: "Conservatism"
 paternalism: "Paternalism"
 despotism: "Despotism"
 ultranationalism: "Ultranationalism"
-fascism: "Ruscism"
+fascism: "Third Positionism"
 putinism: "Putinism"
 
 communist_noun: "Communism"
@@ -20,7 +20,7 @@ conservatism_noun: "Conservatism"
 paternalism_noun: "Paternalism"
 despotism_noun: "Despotism"
 ultranationalism_noun: "Ultranationalism"
-fascism_noun: "Ruscism"
+fascism_noun: "Third Positionism"
 putinism_noun: "Putinism"
 
 communist_desc: "Communism"
@@ -32,7 +32,7 @@ conservatism_desc: "Conservatism"
 paternalism_desc: "Paternalism"
 despotism_desc: "Despotism"
 ultranationalism_desc: "Ultranationalism"
-fascism_desc: "Ruscism"
+fascism_desc: "Third Positionism"
 putinism_desc: "Putinism"
 
 communist_subtype_desc: "Communism is a polarizing ideology, to say the least. As decried as it is praised, it can safely be said to have been, along with National Socialism, one of the defining ideologies of the 20th century so far. But what exactly is communism?\n\nDescended from the thought of Marx and Engels, and claiming the heritage of Lenin's revolution, its end goal is to establish a classless, stateless, humane society based on common ownership of the means of production and free distribution thereof according to one's needs. Its adherents are firm believers in the concept of class struggle, and aim to overthrow the bourgeoisie to establish a dictatorship of the proletariat - a society and government where the working class and the state are synonymous.\n\nWhile some movements believe in electoralism, most strains of communism are fiercely revolutionary, and tirelessly advocate for the coming of said revolution through 'praxis', or direct action. In this regard, they consciously emulate Lenin and reject the prospect of reform or compromise. Of course, critics abound from all sides; from people claiming that human nature is inherently individualistic and selfish, to socialists decrying the means employed to bring about the proletarian dictatorship, communism has no shortage of detractors. And yet, 'Reds' of all stripes fight on, for they know that once the workers of the world unite, they have nothing to lose but their chains."
@@ -188,6 +188,7 @@ ultranationalism_reactionary_nationalism_subtype: "Reactionary Nationalism"
 ultranationalism_american_revanchism_subtype: "American Revanchism"
 
 fascism_corporate_statism_subtype: "Corporate Statism"
+fascism_ruscism_subtype: "Ruscism"
 fascism_corporatism_subtype: "Corporatism"
 fascism_sansepolcrismo_subtype: "Sansepolcrismo"
 fascism_ruscist_mysticism_subtype: "Fascist Mysticism"
