--- a/localisation/english/TMW_Osaka_l_english.yml
+++ b/localisation/english/TMW_Osaka_l_english.yml
@@ -4,9 +4,9 @@
 # If you want to find anything - select a thing from the index below and press ctrl+f. The idea is not stolen from Calph, of course. Then copied by Storm for TFL
 #
 # Country Names - Starting
-OSK: "State of Osaka"
-OSK_DEF: "the State of Osaka"
-OSK_ADJ: "Osaka"
+OSK: "State of Kansai"
+OSK_DEF: "the State of Kansai"
+OSK_ADJ: "Kansai"
 
 # Party names - Starting
 
